# sam-audio

./: .gitignore  Dockerfile  README.md  construct_checkpoint.py  docker-compose.yml  judge_checkpoint.py  pyproject.toml
.github/workflows/: ci.yaml  python-package-conda.yml
eval/: main.py  musdb.py
eval/metrics/: __init__.py  aes.py  clap.py  judge.py
sam_audio/: __init__.py  inputs.py  looping.py
sam_audio/model/: __init__.py  align.py  base.py  codec.py  config.py  judge.py  model.py  patcher.py  text_encoder.py  transformer.py  vision_encoder.py
sam_audio/ranking/: __init__.py  clap.py  imagebind.py  judge.py  ranker.py
segment_anything_audio/: inputs.py
segment_anything_audio/model/: __init__.py  base.py  codec.py  config.py  judge.py  model.py  patcher.py  rope.py  text_encoder.py  transformer.py  vision_encoder.py
tests/: models.py  test_align_inputs.py  test_attention.py  test_config.py  test_input.py  test_judge.py  test_model.py  test_reranking.py  test_rope.py
tests/data/: get_video_segment.py
