[project]
name = "sam_audio"
version = "0.1.0"
description = "Segment Anything Audio"
authors = [
    { name="Matt Le", email="mattle@meta.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "decord",
    "einops",
    "numpy",
    "torch",
    "torchaudio",
    "torchdiffeq",
    "torchvision",
    "transformers>=4.54.0",
    "perception-models@git+https://github.com/facebookresearch/perception_models@unpin-deps",
]

[project.optional-dependencies]

reranking = [
    "imagebind@git+https://github.com/facebookresearch/ImageBind.git",
    "laion-clap",
]

eval = [
    "audiobox_aesthetics",
    "imagebind@git+https://github.com/facebookresearch/ImageBind.git",
    "laion-clap",
]

[tool.ruff]

lint.select=[
    "B",
    "C",
    "E",
    "W",
    "F",  # pyflakes
    "I",  # isort
]
lint.ignore = [
    "E501",
    "E731",
    "C901",
]

[project.urls]
Homepage = "https://github.com/yourusername/your_project_name"
Repository = "https://github.com/yourusername/your_project_name"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
